Rolling token and format cleanup

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -38,7 +38,7 @@
                             <td class="make-it-center">${{this.price}}</td>
                             <td class="make-it-center">x{{this.quantity}}</td>
                             <td class="make-it-center">
-                                <button class="button is-danger is-small" onclick="removeItem('{{../cart.cid}}', '{{this.pid}}')">
+                                <button class="button section make-it-small is-danger" onclick="removeItem('{{../cart.cid}}', '{{this.pid}}')">
                                     Remove
                                 </button>
                             </td>
@@ -51,10 +51,10 @@
                     Cart ID: {{cart.cid}}
                 </div>
 
-                <div class="section rt-general-page-footer grid-container-3c-by-1r-special">
+                <div class="rt-general-page-footer make-it-semi-back is-centered grid-container-3c-by-1r-special">
                     <div></div>
-                    <button class="button is-small make-it-normal" onclick="emptyCart('{{cart.cid}}')">Empty Cart</button>
-                    <button id="purchaseButton" class="button is-success is-small is-dark make-it-normal" onclick="purchaseCart('{{cart.cid}}')">Complete Purchase</button>
+                    <button class="button section make-it-small" onclick="emptyCart('{{cart.cid}}')">Empty Cart</button>
+                    <button id="purchaseButton" class="button section make-it-small is-success" onclick="purchaseCart('{{cart.cid}}')">Complete Purchase</button>
                 </div>
             </div>
         {{else}}
