--- a/src/views/cartsStatic.handlebars
+++ b/src/views/cartsStatic.handlebars
@@ -12,11 +12,11 @@
 
     <!-- Sorting and Pagination Controls -->
     <div class="columns is-multiline is-centered">
-        <div class="rt-general-page-footer make-it-dark-back is-centered grid-container-3c-by-1r-special make-it-100percent-wide" role="navigation" aria-label="pagination">
+        <div class="rt-general-page-footer make-it-semi-back is-centered grid-container-3c-by-1r-special" role="navigation" aria-label="pagination">
             <a class="button section make-it-small" 
                 href="?page={{prevPage}}&limit={{limit}}&sort={{sort}}&sortOrder={{sortOrder}}">Prev page</a>
 
-            <div class="section make-it-center make-it-rounded make-it-semi-back make-it-dark make-it-small">
+            <div class="make-it-dark small-section make-it-small make-it-center">
                 Page {{currentPage}} of {{totalPages}}
             </div>
 
