--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -6,6 +6,7 @@
     <title>Home</title>
     <meta name="color-scheme" content="dark">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
     
@@ -15,20 +16,16 @@
             <div class="columns is-multiline section">
                 <div class="column is-12">
                     <div class="box make-it-rounded make-it-light-back make-it-normal make-it-left">
-                        
                         <br>
-                        
                         <p class="section">
                             <img src="/static/shopnhour_blue.png" class="small-logo-image">
-                            <br>
-                            <br>
+                            <br><br>
                             El proyecto consiste en un backend para una tienda ficticia llamada <b>'Shopnhour'</b> que vende modelos de trenes. 
                             Integra una base de datos (MongoDB) sobre Node.js y Express para montar un servicio de backend que 
                             provee un catálogo de productos, gestión de carritos de compras y generación de tickets. 
                             Se utiliza autenticación mediante JWT, diferenciando usuarios comunes y administradores.
                         </p>
                         <br>
-                        
                     </div>
                 </div>
                 
@@ -95,5 +92,6 @@
             </div>
         </div>
     </section>
+
 </body>
 </html>
