--- a/src/views/registerSuccess.handlebars
+++ b/src/views/registerSuccess.handlebars
@@ -8,19 +8,28 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top">Registration Completed</h2>
+    <h2 class="section make-it-left make-it-white-back make-it-dark make-it-rounded-top">
+        Registration Completed
+    </h2>
 
     <section class="">
         <div class="section make-it-light-back make-it-small">
             <div class="box make-it-dark">
-                <div class="section make-it-normal make-it-center">Your account has been created.</>
-                <p><strong>Welcome to Shopnhour Store, {{user.firstName}}</strong>. use your email to log on.</p>
+                <div class="section make-it-normal make-it-center">
+                    Your account has been created.
+                </div>
+                <p class="make-it-center">
+                    <strong>Welcome to Shopnhour Store, {{user.firstName}}</strong>.  
+                    Use your email to log in.
+                </p>
             </div>
 
             <div class="grid-container-3c-by-1r">
                 <div></div>
-                <div class="">
-                    <a href="/login" class="navbar-item is-primary make-it-normal button">Log in</a>
+                <div class="make-it-center">
+                    <a href="/login" class="navbar-item is-primary make-it-normal button">
+                        Log In
+                    </a>
                 </div>
                 <div></div>
             </div>
